# RBOT

./: .gitignore  BlenderPoseSetter.py  BlenderVisCode.py  BranchTODO.txt  CMakeLists.txt  CMakeSettings.json  ErrorDerivativeSignDistribution.md  RBOT_Android.pro  README.md  augrealityfilter.cpp  augrealityfilter.h  main.cpp  main.qml  model.cpp  model.h  object3d.cpp  object3d.h  pose_estimator6d.cpp  pose_estimator6d.h  qml.qrc  rendering_engine.cpp  rendering_engine.h  sdt_and_aproximations.ipynb  template_view.cpp
BlenderVisRBOT/: DistanceTransformTranslationVis.blend  PixelsOntoSquirrelVis.blend  SignChangeIssueVis.blend  VertexColoursToGeomNodes.blend
BlenderVisRBOT/contourGen/: contourGen.py
BlenderVisRBOT/heavisideGraph/: heavisideGrapher.py
DatasetResults/: 01DatasetResultNotes.md  DataEvalSummary.csv  MiscApeResults.txt  PerfectMotionEst.txt  RAM_requirements.txt  SampleResults-8bin-Default.txt  SampleResults-8bin-NearestFG.txt  SampleResults-DefaultSettings-V2.txt  SampleResults-DefaultSettings.txt  SampleResults-NearestContourFG-Pt2.txt  SampleResults-NearestContourFG.txt
src/: main.cpp  object3d.cpp  object3d.h  optimization_engine.cpp  optimization_engine.h  pose_estimator6d.cpp  pose_estimator6d.h  rendering_engine.cpp
